--- a/frontend-service/src/main/resources/static/dashboard.html
+++ b/frontend-service/src/main/resources/static/dashboard.html
@@ -116,7 +116,6 @@
               <tr>
                 <th>ID</th>
                 <th>Targa</th>
-                <th>Data</th>
                 <th>Importo</th>
                 <th>Stato</th>
               </tr>
@@ -136,13 +135,10 @@
     <div class="row g-2 align-items-end mb-2">
       <div class="col-12 col-md-4">
         <label class="form-label small" for="searchPlate">Targa</label>
-        <input id="searchPlate" class="form-control form-control-sm" placeholder="es. AB123CD">
+        <input id="searchPlate" class="form-control form-control-sm" placeholder="Inserisci la targa">
       </div>
       <div class="col-12 col-md-2 d-grid">
         <button id="searchPlateBtn" class="btn btn-primary btn-sm">Cerca</button>
-      </div>
-      <div class="col-12 col-md-6 small-muted" id="searchPlateInfo"><br>
-        Inserisci una targa e premi "Cerca" per vedere gli ultimi passaggi.
       </div>
     </div>
     <div class="table-responsive">
@@ -159,25 +155,6 @@
         <tbody id="vehicleSearchTable"></tbody>
       </table>
     </div>
-  </div>
-
-  <!-- Calcolo pedaggio + km -->
-  <div class="card bg-white p-3 mt-3">
-    <h6>Calcola pedaggio</h6>
-    <div class="row g-2 align-items-end mb-2">
-      <div class="col-12 col-md-5">
-        <label class="form-label small">Origine</label>
-        <input id="tollOrigin" class="form-control form-control-sm" placeholder="es. 45.4642,9.1900">
-      </div>
-      <div class="col-12 col-md-5">
-        <label class="form-label small">Destinazione</label>
-        <input id="tollDestination" class="form-control form-control-sm" placeholder="es. 45.0703,7.6869">
-      </div>
-      <div class="col-12 col-md-2 d-grid">
-        <button id="calcTollBtn" class="btn btn-primary btn-sm">Calcola</button>
-      </div>
-    </div>
-    <div class="small-muted" id="tollResult">Inserisci origine/destinazione e premi "Calcola".</div>
   </div>
 </main>
 
