--- a/frontend-service/src/main/resources/static/dashboard.html
+++ b/frontend-service/src/main/resources/static/dashboard.html
@@ -128,34 +128,37 @@
   </div>
 
   <!-- Ricerca veicoli -->
-  <div class="card bg-white p-3 mb-3">
-    <div class="d-flex justify-content-between align-items-center mb-2">
-      <h6 class="mb-0">Ricerca veicoli</h6>
+    <div class="card bg-white p-3 mb-3">
+        <div class="d-flex justify-content-between align-items-center mb-2">
+            <h6 class="mb-0">Ricerca veicoli</h6>
+            <span id="searchPlateInfo" class="small text-muted"></span>
+        </div>
+
+        <div class="row g-2 align-items-end mb-3">
+            <div class="col-12 col-md-4">
+                <label class="form-label small" for="searchPlate">Targa</label>
+                <input id="searchPlate" class="form-control form-control-sm" placeholder="Inserisci la targa">
+            </div>
+            <div class="col-12 col-md-auto">
+                <button id="searchPlateBtn" class="btn btn-primary btn-sm px-4">Cerca</button>
+            </div>
+        </div>
+
+        <div class="table-responsive">
+            <table class="table table-sm mb-0">
+                <thead class="small text-muted">
+                <tr>
+                    <th>Data ingresso</th>
+                    <th>Casello ingresso</th>
+                    <th>Data uscita</th>
+                    <th>Casello uscita</th>
+                    <th>Importo</th>
+                </tr>
+                </thead>
+                <tbody id="vehicleSearchTable"></tbody>
+            </table>
+        </div>
     </div>
-    <div class="row g-2 align-items-end mb-2">
-      <div class="col-12 col-md-4">
-        <label class="form-label small" for="searchPlate">Targa</label>
-        <input id="searchPlate" class="form-control form-control-sm" placeholder="Inserisci la targa">
-      </div>
-      <div class="col-12 col-md-2 d-grid">
-        <button id="searchPlateBtn" class="btn btn-primary btn-sm">Cerca</button>
-      </div>
-    </div>
-    <div class="table-responsive">
-      <table class="table table-sm mb-0">
-        <thead class="small text-muted">
-          <tr>
-            <th>Data ingresso</th>
-            <th>Casello ingresso</th>
-            <th>Data uscita</th>
-            <th>Casello uscita</th>
-            <th>Importo</th>
-          </tr>
-        </thead>
-        <tbody id="vehicleSearchTable"></tbody>
-      </table>
-    </div>
-  </div>
 </main>
 
 
